[gd_scene load_steps=8 format=2]

[ext_resource path="res://BaseBallThrow.gd" type="Script" id=1]
[ext_resource path="res://Characters/Character1 Sprites/Ball.png" type="Texture" id=2]
[ext_resource path="res://Characters/Character1 Sprites/Ball2.png" type="Texture" id=3]

[sub_resource type="Animation" id=5]
resource_name = "BaseBallThrowLeft"
tracks/0/type = "bezier"
tracks/0/path = NodePath("Area2D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -4, -0.25, 0, 0.25, 0, -19, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Area2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -6, -0.25, 0, 0.25, 0, -20, -0.25, 0, 0.25, 0, 40, 0, -9.16667, 0, 9.16667 ),
"times": PoolRealArray( 0, 0.4, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Area2D/AnimatedSprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 3000, 0, -645.856, 0, 645.856 ),
"times": PoolRealArray( 0, 1 )
}

[sub_resource type="Animation" id=2]
tracks/0/type = "bezier"
tracks/0/path = NodePath("Area2D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 4, -0.25, 0, 0.25, 0, 19, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Area2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -6, -0.25, 0, 0.25, 0, -20, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Area2D/AnimatedSprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 3000, 0, -645.856, 0, 645.856 ),
"times": PoolRealArray( 0, 1 )
}

[sub_resource type="CircleShape2D" id=3]
radius = 4.0

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Default",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Hit",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 9.5142, -20 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Area2D"]
root_node = NodePath("../..")
anims/BaseBallThrowLeft = SubResource( 5 )
anims/BaseBallThrowRight = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Area2D"]
rotation = 12.3908
frames = SubResource( 4 )
animation = "Default"
offset = Vector2( -0.5, -0.5 )

[node name="Timer" type="Timer" parent="Area2D"]
wait_time = 0.4
one_shot = true
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="animation_finished" from="Area2D/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Area2D/Timer" to="." method="_on_Timer_timeout"]
